--- a/stylesheets/scss/components/_full-width.scss
+++ b/stylesheets/scss/components/_full-width.scss
@@ -1,64 +1,66 @@
-body.sc-full-width {
-	.sc-appbar {
-		@media #{$small-up} {
-			.sc-appbar-title {
-				margin-left: rem-calc(72px) - (($large-gutter * 1.5) + $appbar-icon-large-size);
+@if( $amp == false ) {
+	body.sc-full-width {
+		.sc-appbar {
+			@media #{$small-up} {
+				.sc-appbar-title {
+					margin-left: rem-calc(72px) - (($large-gutter * 1.5) + $appbar-icon-large-size);
+				}
 			}
 		}
-	}
 
-	.sc-bottom-nav, .sc-bottom-shifting {
-		@media #{$small-up} {
-			left: 0;
-			width: 100%;
+		.sc-bottom-nav, .sc-bottom-shifting {
+			@media #{$small-up} {
+				left: 0;
+				width: 100%;
+			}
 		}
-	}
 
-	.sc-drawer {
-		margin: 0 0 0 -102%;
-
-		@media #{$small-up} {
+		.sc-drawer {
 			margin: 0 0 0 -102%;
-		}
-
-		~ main {
-			left: 0;
-			@include transition(left $transition-small-duration $deceleration-transition);
-
-			@media #{$medium-only} {
-				@include transition(left $transition-medium-duration $deceleration-transition);
-			}
-
-			@media #{$medium-up} {
-				@include transition(left $transition-large-duration $deceleration-transition);
-			}
-		}
-
-		&.sc-expanded {
-			margin: 0;
 
 			@media #{$small-up} {
-				~ main {
-					left: $drawer-small-width;
+				margin: 0 0 0 -102%;
+			}
 
-					@include transition(left $transition-small-duration $sharp-transition);
+			~ main {
+				left: 0;
+				@include transition(left $transition-small-duration $deceleration-transition);
 
-					@media #{$medium-only} {
-						@include transition(left $transition-medium-duration $sharp-transition);
-					}
+				@media #{$medium-only} {
+					@include transition(left $transition-medium-duration $deceleration-transition);
+				}
 
-					@media #{$medium-up} {
-						@include transition(left $transition-large-duration $sharp-transition);
+				@media #{$medium-up} {
+					@include transition(left $transition-large-duration $deceleration-transition);
+				}
+			}
+
+			&.sc-expanded {
+				margin: 0;
+
+				@media #{$small-up} {
+					~ main {
+						left: $drawer-small-width;
+
+						@include transition(left $transition-small-duration $sharp-transition);
+
+						@media #{$medium-only} {
+							@include transition(left $transition-medium-duration $sharp-transition);
+						}
+
+						@media #{$medium-up} {
+							@include transition(left $transition-large-duration $sharp-transition);
+						}
 					}
 				}
 			}
 		}
-	}
 
-	.sc-tabs {
-		@media #{$small-up} {
-			left: 0;
-			width: 100%;
+		.sc-tabs {
+			@media #{$small-up} {
+				left: 0;
+				width: 100%;
+			}
 		}
 	}
 }
