--- a/stylesheets/scss/components/_icons.scss
+++ b/stylesheets/scss/components/_icons.scss
@@ -11,10 +11,9 @@
 	width: $icon-size;
 	color: if( $theme == light, rgba($black, .26), rgba($white, .3));
 
-	&.sc-active, &:active {
+	&:active, &.sc-active {
 		color: if( $theme == light, rgba($black, .54), rgba($white, 1));
 	}
-
 
 	display: inline-flex;
 	align-items: center;
