--- a/stylesheets/scss/components/_sliders.scss
+++ b/stylesheets/scss/components/_sliders.scss
@@ -30,12 +30,14 @@ input[type="range"] {
 		height: $slider-track-height;
 		@include transition(background $transition-small-duration $standard-transition);
 
-		@media #{$medium-up} {
-			@include transition(background $transition-medium-duration $standard-transition);
-		}
+		@if( $amp == false ) {
+			@media #{$medium-up} {
+				@include transition(background $transition-medium-duration $standard-transition);
+			}
 
-		@media #{$large-up} {
-			@include transition(background $transition-large-duration $standard-transition);
+			@media #{$large-up} {
+				@include transition(background $transition-large-duration $standard-transition);
+			}
 		}
 
 		&:focus, &:active {
@@ -60,12 +62,14 @@ input[type="range"] {
 		@include appearance(none);
 		@include transition(all $transition-small-duration $standard-transition);
 
-		@media #{$medium-only} {
-			@include transition(all $transition-medium-duration $standard-transition);
-		}
+		@if( $amp == false ) {
+			@media #{$medium-only} {
+				@include transition(all $transition-medium-duration $standard-transition);
+			}
 
-		@media #{$medium-up} {
-			@include transition(all $transition-large-duration $standard-transition);
+			@media #{$medium-up} {
+				@include transition(all $transition-large-duration $standard-transition);
+			}
 		}
 
 		&:focus, &:active {
@@ -208,24 +212,16 @@ input[type="range"] {
 								margin $transition-small-duration $standard-transition
 			);
 
-			@media #{$medium-only} {
-				@include transition(background $transition-medium-duration $standard-transition unquote(',')
-									width $transition-medium-duration $standard-transition unquote(',')
-									height $transition-medium-duration $standard-transition unquote(',')
-									border $transition-medium-duration $standard-transition unquote(',')
-									bottom $transition-medium-duration $standard-transition unquote(',')
-									margin $transition-medium-duration $standard-transition
-				);
-			}
+			@if( $amp == false ) {
+				@media #{$medium-only} {
+					@include transition(background $transition-medium-duration $standard-transition unquote(',') width $transition-medium-duration $standard-transition unquote(',') height $transition-medium-duration $standard-transition unquote(',') border $transition-medium-duration $standard-transition unquote(',') bottom $transition-medium-duration $standard-transition unquote(',') margin $transition-medium-duration $standard-transition
+					);
+				}
 
-			@media #{$medium-up} {
-				@include transition(background $transition-large-duration $standard-transition unquote(',')
-									width $transition-large-duration $standard-transition unquote(',')
-									height $transition-large-duration $standard-transition unquote(',')
-									border $transition-large-duration $standard-transition unquote(',')
-									bottom $transition-large-duration $standard-transition unquote(',')
-									margin $transition-large-duration $standard-transition
-				);
+				@media #{$medium-up} {
+					@include transition(background $transition-large-duration $standard-transition unquote(',') width $transition-large-duration $standard-transition unquote(',') height $transition-large-duration $standard-transition unquote(',') border $transition-large-duration $standard-transition unquote(',') bottom $transition-large-duration $standard-transition unquote(',') margin $transition-large-duration $standard-transition
+					);
+				}
 			}
 
 			&:before {
@@ -243,20 +239,16 @@ input[type="range"] {
 									top $transition-small-duration $standard-transition
 				);
 
-				@media #{$medium-only} {
-					@include transition(border-left $transition-medium-duration $standard-transition unquote(',')
-										border-right $transition-medium-duration $standard-transition unquote(',')
-										border-top $transition-medium-duration $standard-transition unquote(',')
-										top $transition-medium-duration $standard-transition
-					);
-				}
+				@if( $amp == false ) {
+					@media #{$medium-only} {
+						@include transition(border-left $transition-medium-duration $standard-transition unquote(',') border-right $transition-medium-duration $standard-transition unquote(',') border-top $transition-medium-duration $standard-transition unquote(',') top $transition-medium-duration $standard-transition
+						);
+					}
 
-				@media #{$medium-up} {
-					@include transition(border-left $transition-large-duration $standard-transition unquote(',')
-										border-right $transition-large-duration $standard-transition unquote(',')
-										border-top $transition-large-duration $standard-transition unquote(',')
-										top $transition-large-duration $standard-transition
-					);
+					@media #{$medium-up} {
+						@include transition(border-left $transition-large-duration $standard-transition unquote(',') border-right $transition-large-duration $standard-transition unquote(',') border-top $transition-large-duration $standard-transition unquote(',') top $transition-large-duration $standard-transition
+						);
+					}
 				}
 			}
 
