--- a/stylesheets/scss/components/_expansion-panels.scss
+++ b/stylesheets/scss/components/_expansion-panels.scss
@@ -21,16 +21,50 @@
 							visibility $transition-small-duration $standard-transition unquote(',')
 							opacity $transition-small-duration $standard-transition);
 
-		@media #{$medium-only} {
-			@include transition(max-height $transition-medium-duration $standard-transition unquote(',')
-								visibility $transition-medium-duration $standard-transition unquote(',')
-								opacity $transition-medium-duration $standard-transition);
-		}
+		@if( $amp == false ) {
+			@media #{$medium-only} {
+				@include transition(max-height $transition-medium-duration $standard-transition unquote(',') visibility $transition-medium-duration $standard-transition unquote(',') opacity $transition-medium-duration $standard-transition);
+			}
 
-		@media #{$medium-up} {
-			@include transition(max-height $transition-large-duration $standard-transition unquote(',')
-								visibility $transition-large-duration $standard-transition unquote(',')
-								opacity $transition-large-duration $standard-transition);
+			@media #{$medium-up} {
+				@include transition(max-height $transition-large-duration $standard-transition unquote(',') visibility $transition-large-duration $standard-transition unquote(',') opacity $transition-large-duration $standard-transition);
+			}
+		}
+	}
+
+	label {
+		font-weight: 400;
+		font-size: rem-calc(15px);
+		color: rgba($black, .87);
+		margin: 0 rem-calc(16px) 0 0;
+	}
+
+	.sc-expand-icon {
+		color: rgba($black, .38);
+		position: absolute;
+		right: rem-calc(24px);
+		line-height: rem-calc(48px);
+		cursor: pointer;
+		margin: 0 0 0 rem-calc(16px);
+		vertical-align: middle;
+
+		.material-icons {
+			font-size: rem-calc(24px);
+			@include square(rem-calc(24px));
+			cursor: pointer;
+			@include transform(rotate(0deg));
+			@include transition(transform $transition-small-duration $standard-transition);
+
+			@if( $amp == false ) {
+				@media #{$medium-only} {
+					@include transition(transform $transition-medium-duration $standard-transition);
+
+				}
+
+				@media #{$medium-up} {
+					@include transition(transform $transition-large-duration $standard-transition);
+				}
+			}
 		}
 	}
 
@@ -42,13 +76,6 @@
 		border-bottom: rem-calc(1px) solid rgba($black, .12);
 		position: relative;
 		background: var(--background, $background);
-
-		label {
-			font-weight: 400;
-			font-size: rem-calc(15px);
-			color: rgba($black, .87);
-			margin: 0 rem-calc(16px) 0 0;
-		}
 
 		&.sc-expanded {
 			margin: rem-calc(16px) 0;
@@ -62,33 +89,6 @@
 				padding: 0 0 rem-calc(16px) 0;
 				@include opacity(1);
 				visibility: visible;
-			}
-		}
-
-		.sc-expand-icon {
-			color: rgba($black, .38);
-			position: absolute;
-			right: rem-calc(24px);
-			line-height: rem-calc(48px);
-			cursor: pointer;
-			margin: 0 0 0 rem-calc(16px);
-			vertical-align: middle;
-
-			.material-icons {
-				font-size: rem-calc(24px);
-				@include square(rem-calc(24px));
-				cursor: pointer;
-				@include transform(rotate(0deg));
-				@include transition(transform $transition-small-duration $standard-transition);
-
-				@media #{$medium-only} {
-					@include transition(transform $transition-medium-duration $standard-transition);
-
-				}
-
-				@media #{$medium-up} {
-					@include transition(transform $transition-large-duration $standard-transition);
-				}
 			}
 		}
 
