--- a/stylesheets/scss/components/_menu.scss
+++ b/stylesheets/scss/components/_menu.scss
@@ -19,12 +19,14 @@
 	z-index: 4;
 	@include transition(max-width $transition-small-duration $standard-transition unquote(',') max-height $transition-small-duration $standard-transition);
 
-	@media #{$medium-only} {
-		@include transition(max-width $transition-medium-duration $standard-transition unquote(',') max-height $transition-medium-duration $standard-transition);
-	}
+	@if( $amp == false ) {
+		@media #{$medium-only} {
+			@include transition(max-width $transition-medium-duration $standard-transition unquote(',') max-height $transition-medium-duration $standard-transition);
+		}
 
-	@media #{$medium-up} {
-		@include transition(max-width $transition-large-duration $standard-transition unquote(',') max-height $transition-large-duration $standard-transition);
+		@media #{$medium-up} {
+			@include transition(max-width $transition-large-duration $standard-transition unquote(',') max-height $transition-large-duration $standard-transition);
+		}
 	}
 
 	a {
@@ -35,12 +37,14 @@
 		padding: (rem-calc(48px) - (rem-calc(20px) + rem-calc($font-size-menu + 0px))) $gutter rem-calc(20px) $gutter;
 		@include transition(background $transition-small-duration $standard-transition);
 
-		@media #{$medium-only} {
-			@include transition(background $transition-medium-duration $standard-transition);
-		}
+		@if( $amp == false ) {
+			@media #{$medium-only} {
+				@include transition(background $transition-medium-duration $standard-transition);
+			}
 
-		@media #{$medium-up} {
-			@include transition(background $transition-large-duration $standard-transition);
+			@media #{$medium-up} {
+				@include transition(background $transition-large-duration $standard-transition);
+			}
 		}
 
 		&:hover {
