--- a/stylesheets/scss/components/_mixins.scss
+++ b/stylesheets/scss/components/_mixins.scss
@@ -35,13 +35,15 @@
 		);
 	}
 
-	@if( ( $depth - 2 ) >= 1 ) {
-		@media #{$medium-up} {
-			@include box-shadow(
-					#{map-get($elevation-umbra-map, ( $depth - 2 ))} $elevation-umbra-color unquote(',')
-					#{map-get($elevation-penumbra-map, ( $depth - 2 ))} $elevation-penumbra-color unquote(',')
-					#{map-get($elevation-ambient-map, ( $depth - 2 ))} $elevation-ambient-color
-			);
+	@if( $amp == false ) {
+		@if (( $depth - 2 ) >= 1) {
+			@media #{$medium-up} {
+				@include box-shadow(
+						#{map-get($elevation-umbra-map, ( $depth - 2 ))} $elevation-umbra-color unquote(',')
+						#{map-get($elevation-penumbra-map, ( $depth - 2 ))} $elevation-penumbra-color unquote(',')
+						#{map-get($elevation-ambient-map, ( $depth - 2 ))} $elevation-ambient-color
+				);
+			}
 		}
 	}
 }
@@ -168,9 +170,11 @@
 	color: $color;
 	text-transform: $transform;
 
-	@if( $small-font-size > 0 ) {
-		@media #{$medium-down} {
-			font-size: rem-calc($small-font-size+0px);
+	@if( $amp == false ) {
+		@if ($small-font-size > 0) {
+			@media #{$medium-down} {
+				font-size: rem-calc($small-font-size+0px);
+			}
 		}
 	}
 }
