--- a/stylesheets/scss/components/_snackbars.scss
+++ b/stylesheets/scss/components/_snackbars.scss
@@ -18,22 +18,26 @@ $snackbar-action-margin: rem-calc(24px);
 	position: fixed;
 	right: 0;
 
-	@media #{$medium-up} {
-		left: auto;
-		right: auto;
-		min-width: rem-calc(288px);
-		max-width: rem-calc(568px);
-		@include border-radius(var(--border-size, $border-size));
+	@if( $amp == false ) {
+		@media #{$medium-up} {
+			left: auto;
+			right: auto;
+			min-width: rem-calc(288px);
+			max-width: rem-calc(568px);
+			@include border-radius(var(--border-size, $border-size));
+		}
 	}
 
 	&-action {
-		@extend .sc-right;
+		float: right;
 		font-weight: 500;
 		margin: 0 0 0 $snackbar-action-margin;
 		text-transform: capitalize;
 
-		@media #{$large-up} {
-			margin: 0 0 0 ($snackbar-action-margin * 2);
+		@if( $amp == false ) {
+			@media #{$large-up} {
+				margin: 0 0 0 ($snackbar-action-margin * 2);
+			}
 		}
 	}
 }
