--- a/stylesheets/scss/components/_tooltips.scss
+++ b/stylesheets/scss/components/_tooltips.scss
@@ -36,18 +36,18 @@ $tooltip-large-padding: 0 rem-calc(8px); // Default 0 rem-calc(8px)
 		@include transition(top $transition-small-duration $standard-transition unquote(',')
 							margin $transition-small-duration $standard-transition);
 
-		@media #{$medium-only} {
-			@include transition(top $transition-medium-duration $standard-transition unquote(',')
-								margin $transition-medium-duration $standard-transition);
-		}
+		@if( $amp == false ) {
+			@media #{$medium-only} {
+				@include transition(top $transition-medium-duration $standard-transition unquote(',') margin $transition-medium-duration $standard-transition);
+			}
 
-		@media #{$medium-up} {
-			font-size: rem-calc(10px);
-			height: $tooltip-large-height;
-			line-height: $tooltip-large-height;
-			padding: $tooltip-large-padding;
-			@include transition(top $transition-large-duration $standard-transition unquote(',')
-								margin $transition-large-duration $standard-transition);
+			@media #{$medium-up} {
+				font-size: rem-calc(10px);
+				height: $tooltip-large-height;
+				line-height: $tooltip-large-height;
+				padding: $tooltip-large-padding;
+				@include transition(top $transition-large-duration $standard-transition unquote(',') margin $transition-large-duration $standard-transition);
+			}
 		}
 	}
 
@@ -58,20 +58,24 @@ $tooltip-large-padding: 0 rem-calc(8px); // Default 0 rem-calc(8px)
 		top: $tooltip-small-top;
 		margin: $tooltip-small-top 0 0 0;
 
-		@media #{$medium-up} {
-			top: $tooltip-large-top;
-			margin: $tooltip-large-top 0 0 0;
+		@if( $amp == false ) {
+			@media #{$medium-up} {
+				top: $tooltip-large-top;
+				margin: $tooltip-large-top 0 0 0;
+			}
 		}
 	}
 
-	&.sc-raised-button, .sc-flat-button {
+	&.sc-raised-button, &.sc-flat-button {
 		&:hover:after {
 			top: $raised-size;
 			margin: $tooltip-small-top 0 0 0;
 
-			@media #{$medium-up} {
-				top: $raised-size;
-				margin: $tooltip-large-top 0 0 0;
+			@if( $amp == false ) {
+				@media #{$medium-up} {
+					top: $raised-size;
+					margin: $tooltip-large-top 0 0 0;
+				}
 			}
 		}
 	}
